Add service name to command template

--- a/icinga2_conf/commands.conf
+++ b/icinga2_conf/commands.conf
@@ -62,5 +62,6 @@ object NotificationCommand "xmpp-notification" {
     notification_hostname = "$host.name$"
     notification_hostdisplayname = "$host.display_name$"
     notification_userjid = "$userjid$"
+    notification_servicename = "$service.name$"
   }
 }
