Add argument to config

--- a/icinga2_conf/commands.conf
+++ b/icinga2_conf/commands.conf
@@ -28,8 +28,12 @@ object NotificationCommand "xmpp-notification" {
       value = "$notification_output$"
     }
     "-r" = {
-      required = true
+      required = false
       value = "$notification_userjid$"
+    }
+    "--muc" = {
+      required = false
+      value = "$notification_muc$"
     }
     "-S" = {
       required = true
